package MITELOVERS.domain.sale;

public class Sale{

}
