@startuml
'https://plantuml.com/class-diagram

'==== Title ====
title MiteLovers – DDD - Granularity 1
top to bottom direction

'==== basic style ====

'hides unwanted text

skinparam monochrome false

skinparam monochrome false
skinparam shadowing false
skinparam defaultFontName Futura
skinparam objectFontSize 20
skinparam backgroundColor CornSilk
skinparam objectBackgroundColor WhiteSmoke
skinparam noteBackgroundColor #FFFFE0
skinparam ArrowFontColor #3B4953
skinparam ActivationBackgroundColor black
skinparam classAttributeIconSize 0

'--- undefined objects ---'
skinparam object {
  BackgroundColor<<highlight>> 91C6BCAA
  BorderColor<<highlight>> 4B9DA9AA
  FontColor<<highlight>> 547792AA
}
skinparam shadowing<<highlight>> false

'--- Objects - Aggregate Roots ---'


class User <<Aggregate Root>>
class Library <<Aggregate Root>> {}
class ListOfItems <<Aggregate Root>> {}
class Item <<Aggregate Root>> {}
class City <<Aggregate Root>> {}
class Country <<Aggregate Root>> {}
class DirectSale <<Aggregate Root>> {}
class Auction <<Aggregate Root>> {}
'class Bid <<Entity>> {}
class Edition <<Aggregate Root>> {}
class PublishingCompany <<Aggregate Root>> {}
class Publication <<Aggregate Root>> {}
class Author <<Aggregate Root>> {}
class PublicationType <<Aggregate Root>>  {}
class Genre <<Aggregate Root>> {}
class AppraisalEntity <<Aggregate Root>> {}
class ShoppingCart <<Aggregate Root>> {}
class Sale <<Aggregate Root>> {}

'=== Correlations ==='

'--- Edition ---'
Edition "*" --> "1" PublishingCompany
Edition "*" --> "1" Publication
Edition "1" --> "*" Item
Edition "*" --> "1" PublicationType

'--- Item ---'
Library "1" --> "*" Item
ListOfItems "1" --> "*" Item

'--- ListOfItems ---'
ListOfItems "*" --> "1" User
ListOfItems "1" --> "1" Genre

'--- User ---'
User "*" --> "1" City
User "1" --> "1" Library
'User "1" --> "*" Bid
User "1" --> "*" Auction
User "1" --> "*" DirectSale
User "1" --> "1" ShoppingCart

'--- Publication ---'
Publication "*" --> "1" Author
Publication "*" --> "1" Genre

'--- AppraisalEntity ---'
AppraisalEntity "1" --> "1..*" PublicationType
AppraisalEntity "1" ----> "1..*" Genre

'--- Listing ---'
Item "1" --> "0..1" Auction
Item "1" --> "0..1" DirectSale
'Auction "1" --> "*" Bid

'--- City ---'
City "*" --> "1" Country

'--- ShoppingCarte ---'
'--- Sale ---'
User "1" --> "*" Sale


@enduml